--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,16 +26,15 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: '4.1.2'
+
+      # Install libcurl as cURL R package dependency  
+      - name: Install libcurl from libcurl4-openssl-dev 
+        run: sudo apt-get install -y --no-install-recommends libcurl4-openssl-dev
       
       # Set up R packages cache for workflow reruns and restores cache 
       # automatically using renv::restore()   
       - name: Cache R packages
         uses: r-lib/actions/setup-renv@v2
-        with:
-          cache: true
-
-      # Install cURL to transfer data to virtual environment
-      - run: sudo apt-get install -y --no-install-recommends libcurl4-openssl-dev
       
       # Executes R scripts
       - name: Extract data from ABS labour force data API 
