--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,8 @@ on:
 jobs:
   run_report:
     runs-on: ubuntu-latest
-    env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+    #env:
+      #GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       # Checks out your repository under $GITHUB_WORKSPACE so your job can access it
